--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head><title>Carly Fleming</title></head>
-<h1><title>The Story of Carly Fleming</title></h1>
+<h1><title>Carly Fleming</title></h1>
 <body>
 	<img src= "https://scontent-a-lga.xx.fbcdn.net/hphotos-prn1/15441_1129644369022_1350057_n.jpg" align="left"/>
-	<p>The signs were there all along. There were the many times her mom took her books away to force her to interact with people. There was the time she was told reenacting civil war battles with stuffed animals was not an acceptable activity for a high school kid on a Friday night. There was also that brief moment when she began walking towards Pokémon cards as if she were one of the final five cylons destined to find the source of that frakking song stuck in their head, before her brothers quickly diverted her attention. Though there were several success stories, no one could fully stop her from going through life from one geeky obsession to the next. She currently is obsessed with voting behavior, <a href="http://bucultureshock.com/author/cjfleming/">blogging</a> and <a href="http://www.theonion.com/articles/obama-depressed-distant-since-battlestar-galactica,2693/?ref=auto">BSG</a>. Now, she aims to add coding to that list in order <a href="http://rampup.startupinstitute.com/">RampUp</a> her technical skills and bridge the gap between the political and tech communities.</p>
+	<p>One of my favorite memories from childhood, or to be completely honest near adulthood, was spending a Friday night reenacting civil war battles with stuffed animals and three of my closest human friends. That moment encompassed everything I wanted out of life: a subject matter I was interested in, a creative outlet for telling a story, and a connection with people whom I could both share and learn from. While the others walked away from that moment feeling badly about not having spent it partying like normal kids, I felt true to myself and my passions. Today, I am interested in behavior and decision-making, particularly as it relates to politics. I love telling stories through the language of data and succinct prose. Through front-end development, I aim to make websites that connects the user to the owner by telling a compelling story based on the behavior and interest of the user.</p>
 </body>
 </html>
