--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head><title>Carly Fleming</title></head>
-<h1><title>Carly Fleming</title></h1>
 <body>
-	<img src= "https://scontent-a-lga.xx.fbcdn.net/hphotos-prn1/15441_1129644369022_1350057_n.jpg" align="left"/>
-	<p>One of my favorite memories from childhood, or to be completely honest near adulthood, was spending a Friday night reenacting civil war battles with stuffed animals and three of my closest human friends. That moment encompassed everything I wanted out of life: a subject matter I was interested in, a creative outlet for telling a story, and a connection with people whom I could both share and learn from. While the others walked away from that moment feeling badly about not having spent it partying like normal kids, I felt true to myself and my passions. Today, I am interested in behavior and decision-making, particularly as it relates to politics. I love telling stories through the language of data and succinct prose. Through front-end development, I aim to make websites that connects the user to the owner by telling a compelling story based on the behavior and interest of the user.</p>
+	<img src= "https://scontent-a-lga.xx.fbcdn.net/hphotos-prn1/15441_1129644369022_1350057_n.jpg" align="right"/>
+	<h1>Carly Fleming</h1>
+	<p>One of my favorite memories from childhood, or to be completely honest near adulthood, was spending a Friday night reenacting civil war battles with stuffed animals and three of my closest human friends. That moment encompassed everything I wanted out of life: a subject matter I was interested in, a creative outlet for telling a story, and a connection to people with whom I could both share and learn from. While the others walked away from that moment feeling badly about not having spent it partying like normal kids, I felt true to myself and my passions. Today, I am interested in behavior and decision-making, particularly as it relates to politics. I love telling stories through the language of data and succinct prose. I aim to build communities through websites and online engagement.</p>
 </body>
 </html>
