--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head><title>Carly Fleming</title></head>
 <body>
 	<img src= "https://scontent-a-lga.xx.fbcdn.net/hphotos-prn1/15441_1129644369022_1350057_n.jpg" align= "right"/>
-	&#9;
-	<p>One of my favorite memories from childhood, or to be completely honest near adulthood, was spending a Friday night reenacting civil war battles with stuffed animals and three of my closest human friends. That moment encompassed everything I wanted out of life: a subject matter I was interested in, a creative outlet for telling a story, and a connection to people with whom I could both share and learn from. While the others walked away from that moment feeling badly about not having spent it partying like normal kids, I felt true to myself and my passions.</p>
+	&#4;
+	<p><font face="sans-serif"> One of my favorite memories from childhood, or to be completely honest near adulthood, was spending a Friday night reenacting civil war battles with stuffed animals and three of my closest human friends. That moment encompassed everything I wanted out of life: a subject matter I was interested in, a creative outlet for telling a story, and a connection to people with whom I could both share and learn from. While the others walked away from that moment feeling badly about not having spent it partying like normal kids, I felt true to myself and my passions.</p>
 	&#9;
 
 			<h1 align="center">Carly Fleming</h1>
