--- a/coffee/index.html
+++ b/coffee/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<head><title>Coffee</title></head>
+	<head><title>Coffee</title>
+		<meta charset="UTF-8">
+	</head>
 	<body>
 		<header>
 			<h1>Dream Beans Coffee</h1>
-			<nav id='top menu'>
+			<nav id='top-menu'>
 				<ul class='menu'>
 					<li>about</li>
 					<li>beans</li>
