--- a/coffee/index.html
+++ b/coffee/index.html
@@ -5,7 +5,8 @@
 	</head>
 	<body>
 		<header>
-			<h1>Dream Beans Coffee</h1>
+			<img src="images/beans.jpg">
+			<h1><img src="images/beans-logo.png"> Beans Coffee</h1>
 			<nav id='top-menu'>
 				<ul class='menu'>
 					<li>about</li>
