--- a/coffee/index.html
+++ b/coffee/index.html
@@ -19,18 +19,18 @@
 		<section id='content'>
 			<article class='left column'>
 				<h2>Organic. Crema. Barista</h2>
-				<p>est spoon half and half extra flavour saucer. Plunger pot cafÃ© au lait froth ut fair trade whipped, doppio, milk at half and half white percolator. French press iced carajillo, coffee caramelization caffeine half and half irish id kopi-luwak latte cappuccino. Extra id, sweet breve robust extra seasonal.</p>
-				<p>A robust, extra shop, espresso eu, cultivar ut barista whipped extra. Et galÃ£o, robusta mocha froth dark percolator. Flavour aftertaste, cup froth, chicory sugar barista roast robust caramelization. Macchiato single shot steamed, ristretto acerbic coffee aroma mocha at dripper.</p>
+				<p>est spoon half and half extra flavour saucer. Plunger pot caf&#233 au lait froth ut fair trade whipped, doppio, milk at half and half white percolator. French press iced carajillo, coffee caramelization caffeine half and half irish id kopi-luwak latte cappuccino. Extra id, sweet breve robust extra seasonal.</p>
+				<p>A robust, extra shop, espresso eu, cultivar ut barista whipped extra. Et gal&#227o, robusta mocha froth dark percolator. Flavour aftertaste, cup froth, chicory sugar barista roast robust caramelization. Macchiato single shot steamed, ristretto acerbic coffee aroma mocha at dripper.</p>
 			</article>
 			<article class='right column'>
 				<h2>Coffee. Bar. French Press</h2>
-				<p>trifecta, organic kopi-luwak mocha redeye et instant. Crema, at, french press, americano bar trifecta dark breve carajillo caffeine wings. Cinnamon cappuccino cultivar organic, filter in, lungo, cultivar strong acerbic qui galÃ£o. Cultivar aromatic, saucer shop, latte in sugar crema blue mountain aftertaste.</p>
-				<p>Caffeine percolator cafÃ© au lait body robust espresso variety kopi-luwak. Extraction cortado aged organic macchiato seasonal cortado trifecta. Mug brewed sugar turkish americano lungo extraction. Ristretto, robusta dripper, half and half cup dark single shot seasonal.</p>
+				<p>trifecta, organic kopi-luwak mocha redeye et instant. Crema, at, french press, americano bar trifecta dark breve carajillo caffeine wings. Cinnamon cappuccino cultivar organic, filter in, lungo, cultivar strong acerbic qui gal&#227o. Cultivar aromatic, saucer shop, latte in sugar crema blue mountain aftertaste.</p>
+				<p>Caffeine percolator caf&#233 au lait body robust espresso variety kopi-luwak. Extraction cortado aged organic macchiato seasonal cortado trifecta. Mug brewed sugar turkish americano lungo extraction. Ristretto, robusta dripper, half and half cup dark single shot seasonal.</p>
 			</article>
 		</section>
 		<footer id='site-footer'>
 			<p>123 Latte Lane, Javaville - 555-423-1234
-			Â©Dream Beans Caffe 2013</p>
+			&#169 Dream Beans Caffe 2013</p>
 		</footer>
 	</body>
 </html>
