--- a/coffee/index.html
+++ b/coffee/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<header>
 			<img src="images/beans.jpg">
-			<h1><img src="images/beans-logo.png"> Beans Coffee</h1>
+			<h1><img src="images/beans-logo.png" alt="Dream"> Beans Caffe</h1>
 			<nav id='top-menu'>
 				<ul class='menu'>
 					<li>about</li>
