--- a/coffee/about.html
+++ b/coffee/about.html
@@ -6,7 +6,7 @@
 	<body>
 		<header>
 			<img src="images/beans.jpg" alt="beans">
-			<h1><img src="images/beans-logo.png" alt="Dream"> Beans Caffe</h1>
+			<h1><a href="index.html"><img src="images/beans-logo.png" alt="Dream"> Beans Caffe</a></h1>
 			<nav id='top-menu'>
 				<ul class='menu'>
 					<li><a href="about.html">about</a></li>
