--- a/coffee/specials.html
+++ b/coffee/specials.html
@@ -2,11 +2,12 @@
 <html>
 	<head><title>Specials</title>
 		<meta charset="UTF-8">
+		<link href="style.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
 			<img src="images/beans.jpg" alt="beans">
-			<h1><a href="index.html"><img src="images/beans-logo.png" alt="Dream"> Beans Caffe</a></h1>
+			<h1><a href="index.html"><img src="images/beans-logo.png" alt="Dream"> BEANS CAFFE</a></h1>
 			<nav id='top-menu'>
 				<ul class='menu'>
 					<li><a href="about.html">about</a></li>
@@ -16,7 +17,7 @@
 				</ul>
 			</nav>
 		</header>
-		<section>
+		<section class='content'>
 			<article>
 				<h2>Specials</h2>
 				<p>Specials change weekly. This week feature kopi-luwak. From Indonesia, the coffee beans are eaten and extreted by palm civets.</p>
