--- a/coffee/contact.html
+++ b/coffee/contact.html
@@ -2,11 +2,12 @@
 <html>
 	<head><title>Contact</title>
 		<meta charset="UTF-8">
+		<link href="style.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
 			<img src="images/beans.jpg" alt="beans">
-			<h1><a href="index.html"><img src="images/beans-logo.png" alt="Dream"> Beans Caffe</a></h1>
+			<h1><a href="index.html"><img src="images/beans-logo.png" alt="Dream"> BEANS CAFFE</a></h1>
 			<nav id='top-menu'>
 				<ul class='menu'>
 					<li><a href="about.html">about</a></li>
@@ -16,7 +17,7 @@
 				</ul>
 			</nav>
 		</header>
-		<section>
+		<section class='content'>
 			<h2>Contact Us</h2>
 			<p>If you would like more information contact us by <a href="mailto:cjfleming51@gmail.com">e-mail.</a> Otherwise, we'd love for you to stop by visit our <a href="https://www.google.com/maps">cafe.</a></p>
 		</section>
