--- a/coffee/index.html
+++ b/coffee/index.html
@@ -2,11 +2,12 @@
 <html>
 	<head><title>Coffee</title>
 		<meta charset="UTF-8">
+		<link href="style.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
 			<img src="images/beans.jpg" alt="beans">
-			<h1><a href="index.html"><img src="images/beans-logo.png" alt="Dream"> Beans Caffe</a></h1>
+			<h1><a href="index.html"><img src="images/beans-logo.png" alt="Dream"> BEANS CAFFE</a></h1>
 			<nav id='top-menu'>
 				<ul class='menu'>
 					<li><a href="about.html">about</a></li>
