--- a/coffee/index.html
+++ b/coffee/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<header>
 			<img src="images/beans.jpg" alt="beans">
-			<h1><a href="index.html"><img src="images/beans-logo.png" alt="Dream"> BEANS CAFFE</a></h1>
+			<h1><a href="index.html"><img src="images/beans-logo.png" alt="Dream"> BEANS CAFE</a></h1>
 			<nav id='top-menu'>
 				<ul class='menu'>
 					<li><a href="about.html">about</a></li>
@@ -17,7 +17,7 @@
 				</ul>
 			</nav>
 		</header>
-		<section id='content'>
+		<section>
 			<article class='column'>
 				<h2>Organic. Crema. Barista</h2>
 				<p>est spoon half and half extra flavour saucer. Plunger pot caf&#233; au lait froth ut fair trade whipped, doppio, milk at half and half white percolator. French press iced carajillo, coffee caramelization caffeine half and half irish id kopi-luwak latte cappuccino. Extra id, sweet breve robust extra seasonal.</p>
