--- a/coffee/index.html
+++ b/coffee/index.html
@@ -6,8 +6,13 @@
 	</head>
 	<body>
 		<header>
-			<img src="images/beans.jpg" alt="beans">
-			<h1><a href="index.html"><img src="images/beans-logo.png" alt="Dream"> BEANS CAFE</a></h1>
+			<div id='logo-area'>
+				<h1>
+					<a href="index.html">
+						<img src="images/beans-logo.png" alt="Dream">
+					</a>
+				</h1>
+			</div>
 			<nav id='top-menu'>
 				<ul class='menu'>
 					<li><a href="about.html">about</a></li>
