--- a/coffee/contact.html
+++ b/coffee/contact.html
@@ -13,14 +13,18 @@
 					</a>
 				</h1>
 			</div>
-			<nav id='top-menu'>
-				<ul class='menu'>
+			
+			<div id='top-menu'>
+			<nav>
+				<ul>
 					<li><a href="about.html">about</a></li>
 					<li><a href="beans.html">beans</a></li>
 					<li><a href="specials.html">specials</a></li>
 					<li><a href="contact.html">contact</a></li>
 				</ul>
 			</nav>
+			</div>
+
 		</header>
 		<section class='content'>
 			<h2>Contact Us</h2>
