--- a/coffee/index.html
+++ b/coffee/index.html
@@ -13,22 +13,27 @@
 					</a>
 				</h1>
 			</div>
-			<nav id='top-menu'>
-				<ul class='menu'>
+
+
+			<div id='top-menu'>
+			<nav>
+				<ul>
 					<li><a href="about.html">about</a></li>
 					<li><a href="beans.html">beans</a></li>
 					<li><a href="specials.html">specials</a></li>
 					<li><a href="contact.html">contact</a></li>
 				</ul>
 			</nav>
+			</div>
+
 		</header>
 		<section>
-			<article class='column'>
+			<article id='l-column'>
 				<h2>Organic. Crema. Barista</h2>
 				<p>est spoon half and half extra flavour saucer. Plunger pot caf&#233; au lait froth ut fair trade whipped, doppio, milk at half and half white percolator. French press iced carajillo, coffee caramelization caffeine half and half irish id kopi-luwak latte cappuccino. Extra id, sweet breve robust extra seasonal.</p>
 				<p>A robust, extra shop, espresso eu, cultivar ut barista whipped extra. Et gal&#227;o, robusta mocha froth dark percolator. Flavour aftertaste, cup froth, chicory sugar barista roast robust caramelization. Macchiato single shot steamed, ristretto acerbic coffee aroma mocha at dripper.</p>
 			</article>
-			<article class='column'>
+			<article id='r-column'>
 				<h2>Coffee. Bar. French Press</h2>
 				<p>trifecta, organic kopi-luwak mocha redeye et instant. Crema, at, french press, americano bar trifecta dark breve carajillo caffeine wings. Cinnamon cappuccino cultivar organic, filter in, lungo, cultivar strong acerbic qui gal&#227;o. Cultivar aromatic, saucer shop, latte in sugar crema blue mountain aftertaste.</p>
 				<p>Caffeine percolator caf&#233; au lait body robust espresso variety kopi-luwak. Extraction cortado aged organic macchiato seasonal cortado trifecta. Mug brewed sugar turkish americano lungo extraction. Ristretto, robusta dripper, half and half cup dark single shot seasonal.</p>
@@ -36,7 +41,8 @@
 		</section>
 		<footer id='site-footer'>
 			<p>123 Latte Lane, Javaville - 555-423-1234
-			&#169; Dream Beans Caffe 2013</p>
+			</p>
+			<p>&#169; Dream Beans Caffe 2013</p>
 		</footer>
 	</body>
 </html>
