--- a/local/about.html
+++ b/local/about.html
@@ -36,7 +36,7 @@
 			</div>
 				<div class='H2'>
 					<p>Our Journey from Coffee...</p>
-				<div>
+				</div>
 					<div class='text'>
 						<p>The level of quality in coffee is rising exponentially but it is progressing faster than the consumer’s understanding. Single origin coffees and various preparation styles are appearing on menus turning what once was a relaxing trip to the coffee shop into a stressful experience. We are looking to provide a new level of service to fully extract the value of these options and help coffee drinkers find the perfect beverage for their taste.
 						</p>
@@ -50,7 +50,7 @@
 					</div>
 				<div class='H2'>
 					<p>...to Creating a Slipstream...</p>
-				<div>
+				</div>
 					<div class='text'>
 						<p>We see a shared solution centered on reducing the resistance of the typical experience and allowing the beverage to shine. A Slipstream is the area of reduced resistance behind a moving object, and similarly our café hopes to provide a [smooth] path for the coffee and cocktail experience. We will provide encourage understanding through a comfortable environment, engaging service and a selection of quality food and beverage options then step out of your way a true break from the stress of your day.
 						</p>
