--- a/local/contact.html
+++ b/local/contact.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>Slipstream-Our Team
+		<title>Slipstream-Contact
 		</title>
 		<meta charset="UTF-8">
 		<link href="style.css" type="text/css" rel="stylesheet">
@@ -31,6 +31,35 @@
 		</div>
 
 		<div class='content'>
+			<div class='H1'>
+				<p>Contact Us
+				</p>
+			</div>
+
+			<div class='H2'>
+				<p>Visit Us
+				</p>
+			</div>
+
+			<div class='Text'>
+				<p>1333 14th Street NW, Washington, DC 20005
+				</p>
+				<p>Open Daily from 7am until 11pm
+				</p>
+				<p>202-xxx-xxxx
+				</p>
+			</div>
+
+			<div class='H1'>
+				<p>Contact Us
+				</p>
+			</div>
+
+			<div class='H2'>
+				<p>Visit Us
+				</p>
+			</div>
+
 		</div>
 
 		<footer>
