--- a/local/menu.html
+++ b/local/menu.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>Slipstream-Our Team
+		<title>Slipstream-Menu
 		</title>
 		<meta charset="UTF-8">
 		<link href="style.css" type="text/css" rel="stylesheet">
