--- a/local/staff.html
+++ b/local/staff.html
@@ -35,9 +35,39 @@
 				<p>Our Team</p>
 			</div>
 					<div class='text'>
-						<p>mission statement
+						<p>We aim to elevate coffee and cocktails from seemingly common to extraordinary through engaging service, a comfortable atmosphere and a relentless focus on quality. Tastes are personal and we will strive to help you explore your palate and define your own perfect cup.
 						</p>
 					</div>
+
+			<div class="row">
+				<div id='l-column' class='col'>
+					<div class='H2'>
+						<p>Ryan
+						</p>
+					</div>
+					<div class='text'>
+						<p>I grew up in a small town in western Pennsylvania and was surrounded by entrepreneurship at an early age. Working at a small business started by my parents, I learned the importance of community and working hard to deliver a quality product. The desire to further my understanding of business led me to attend business school and subsequently pursue a career in Finance.
+
+						After seven years in finance, it was time for a change. My passion for the amazing story of coffee and cocktails led me to leave my job and go back to my roots in local business. I now hope to follow in the footsteps of my parents’ entrepreneurial spirit and share my love of coffee and cocktails with Logan Circle and the Washington, DC community.
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<div id='r-column' class='col'>
+					<div class='H2'>
+						<p>Miranda
+						</p>
+					</div>
+					<div class='text'>
+						<p>After college I became a nurse; driven by a love for critical thinking in a fast paced environment and the desire to make a difference in people's lives.  A few years ago, I moved into project management where I focused on improving the quality of patient care through technology.
+
+						Now, I am excited to bring my focus on quality of life to the food and service at Slipstream. My Italian grandmother instilled in me a love of food that inspired a passion for quality ingredients and the care and attention that go into pairing them. It is easy to sacrifice eating well in the midst of a busy lifestyle, but I hope to make it equally easy to access delicious, socially conscious food.
+						</p>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<footer>
