--- a/local/index.html
+++ b/local/index.html
@@ -17,8 +17,7 @@
 				</a>
 			</div>
 
-			<div id='top-menu'>
-				<nav>
+			<nav id='top-menu'>
 					<ol>
 						<li><a href="about.html">About Slipstream</a></li>
 						<li><a href="staff.html">Our Team</a></li>
@@ -26,15 +25,14 @@
 						<li><a href="menu.html">Menu</a></li>
 						<li><a href="blog.html">Blog</a></li>
 					</ol>
-				</nav>
-			</div>
+			</nav>
 		</div>
 
 
 
 		<footer id='site-footer' class='row'>
-			<p>1333 14th Street NW, Washington, DC 20005
-			</p>
+			<div id='foot-address'>1333 14th Street NW, Washington, DC 20005
+			</div>
 			<nav id='social-media'>
 				<ol>
 					<li><a href="facebook.com">Facebook</a></li>
