--- a/slider/index.html
+++ b/slider/index.html
@@ -39,16 +39,16 @@
 				
 					<div class="sl-slide bg-1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
 						<div class="sl-slide-inner">
-							<div class="deco" data-icon="H"></div>
-							<h2>A bene placito</h2>
-							<blockquote><p>You have just dined, and however scrupulously the slaughterhouse is concealed in the graceful distance of miles, there is complicity.</p><cite>Ralph Waldo Emerson</cite></blockquote>
+							<div class="decos" img src="images/caffe_latte.png" alt="latte"></div>
+							<h2>Espresso</h2>
+							<blockquote><p>A blend of intense flavors, combined to form a rounded, sensual taste</p><cite>Ralph Waldo Emerson</cite></blockquote>
 						</div>
 					</div>
 					
 					<div class="sl-slide bg-2" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
 						<div class="sl-slide-inner">
 							<div class="deco" data-icon="q"></div>
-							<h2>Regula aurea</h2>
+							<h2>Latte</h2>
 							<blockquote><p>Until he extends the circle of his compassion to all living things, man will not himself find peace.</p><cite>Albert Schweitzer</cite></blockquote>
 						</div>
 					</div>
@@ -56,7 +56,7 @@
 					<div class="sl-slide bg-3" data-orientation="horizontal" data-slice1-rotation="3" data-slice2-rotation="3" data-slice1-scale="2" data-slice2-scale="1">
 						<div class="sl-slide-inner">
 							<div class="deco" data-icon="O"></div>
-							<h2>Dum spiro, spero</h2>
+							<h2>Cafe au lait</h2>
 							<blockquote><p>Thousands of people who say they 'love' animals sit down once or twice a day to enjoy the flesh of creatures who have been utterly deprived of everything that could make their lives worth living and who endured the awful suffering and the terror of the abattoirs.</p><cite>Dame Jane Morris Goodall</cite></blockquote>
 						</div>
 					</div>
